@@ -57,7 +57,6 @@ width="210" height="62" border="0" align="right" alt=
 </tr>
 </tbody>
 </table>
-<br>
-<br>
+<div align="right">This page was last updated: $Date: 2003/09/17 14:22:46 $</div>
 </body>
 </html>
