@@ -46,5 +46,6 @@ project page</a></td>
 </tr>
 </tbody>
 </table>
+<div align="right">This page was last updated: $Date: 2003/09/17 14:22:46 $</div>
 </body>
 </html>
